[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/enemies/special_bosses/dark_knight/assets/Effect-Sheet.png" type="Texture" id=1]
[ext_resource path="res://characters/players/scripts/Spell.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "impact"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "travel"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="DeathBall" type="Area2D"]
collision_layer = 128
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.5, -0.5 )
texture = ExtResource( 1 )
hframes = 8

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/impact = SubResource( 3 )
anims/travel = SubResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Travel" type="AudioStreamPlayer2D" parent="."]

[node name="Impact" type="AudioStreamPlayer2D" parent="."]

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.96046e-08, 2.38419e-07 )
scale = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="animation_started" from="Animation" to="." method="_on_Animation_animation_started"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
